Fixed avatar overlapping overlay issue

--- a/src/components/ui/LookupUser/lookupUser.module.scss
+++ b/src/components/ui/LookupUser/lookupUser.module.scss
@@ -45,9 +45,9 @@
   opacity: 0;
   transition: opacity 80ms ease-in-out;
   transform: translateY(-30px);
-  padding: 0 10px;
+  padding-right: 10px;
   display: flex;
-  justify-content: flex-end;
+  float: right;
   .button {
     background-color: #5865F2;
     padding: 5px 10px;
